# openmanus

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  PROJECT_STATUS.md  README.md  ROADMAP.md  dev.bat  package-lock.json  package.json  restart.bat  stop.bat
.zcode/plans/: plan-sess_ac4e6a36-94ab-47f1-a595-cdd765554ed4.md
backend/: .env.example  .gitignore  pyproject.toml
backend/seed/agents/Coder/: agent.yaml  prompt.md
backend/seed/agents/Manus/: agent.yaml  prompt.md
backend/seed/agents/Researcher/: agent.yaml  prompt.md
backend/seed/agents/TeamLeader/: agent.yaml  prompt.md
backend/seed/skills/code-review/: SKILL.md
backend/src/openmanus/: agent_factory.py  agent_loader.py  channels.py  chat_model.py  config.py  db.py  engine.py  event_schema.py  mailbox.py  main.py  readonly_backend.py  runner.py  skill_loader.py  store.py  team_runner.py  tool_loader.py  whiteboard.py
backend/src/openmanus/api/: __init__.py  agents.py  files.py  sessions.py  skills.py  streams.py  tools.py
backend/src/openmanus/middleware/: agent_trace.py  llm_trace.py  tool_guard.py
backend/src/openmanus/tools/: __init__.py  dispatch_task.py  dispatch_tool.py  mailbox_tools.py  roles.py  whiteboard_tool.py  whiteboard_tools.py
backend/tests/: conftest.py  test_bridge.py  test_build_agent_tools.py  test_tool_guard.py  test_tool_loader.py  test_tool_whitelist.py  test_topics_sessions.py  test_whiteboard_mailbox.py
backend/tests/eval/: README.md  conftest_eval.py  dispatch_eval.py  run_eval.py
backend/tests/eval/fixtures/add_param/: check.py  task.md
backend/tests/eval/fixtures/add_param/starter/: calc.py
backend/tests/eval/fixtures/bfs/: check.py  task.md
backend/tests/eval/fixtures/fix_bug/: check.py  task.md
backend/tests/eval/fixtures/fix_bug/starter/: search.py  test_search.py
docs/: coder-gap.md  mailbox-design.md  topic-session-message-design.md  whiteboard-design.md
electron/: main.cjs  package-lock.json  package.json  preload.cjs
frontend/: .oxlintrc.json  .prettierignore  .prettierrc  components.json  jsconfig.json  package.json  vite.config.js
frontend/src/: App.jsx  app.jsx  index.css  main.jsx  providers.jsx
frontend/src/components/: Avatar.jsx  TopNav.jsx  WindowControls.jsx  avatar.jsx  top-nav.jsx
frontend/src/hooks/: use-store.jsx  use-theme.js  useStore.jsx
frontend/src/lib/: utils.js
frontend/src/runtime/: agent-runtime.js  agentRuntime.js  event-reducer.js  event-reducer.test.js  eventReducer.js  eventReducer.test.js  message-store.js  messageStore.js  stream-client.js  streamClient.js
frontend/src/services/: agentService.js  session-service.js  (+2 more)
(+48 files in other folders)
