[project]
name = "deepopen"
version = "0.1.0"
description = "opencode clone backend: deepagents + AG-UI endpoint for CopilotKit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "deepagents>=0.1",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.6",
    "langgraph-checkpoint-sqlite>=2.0",
    "ag-ui-protocol>=0.1",
    "aiosqlite>=0.22.1",
]

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "deepopen"
